<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="Tipo de Triángulo\nClaudio Cabrera"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="Ingrese Lado A" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="Ingrese Lado B" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="Ingrese Lado C" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ladoAinput"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0"
            android:inputType="number" />

        <EditText
            android:id="@+id/ladoBinput"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0"
            android:inputType="number" />

        <EditText
            android:id="@+id/ladoCinput"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0"
            android:inputType="number" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Según los lados que ingresó, el Triangulo es:" />

        <TextView
            android:id="@+id/txtTipoTriangulo"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnTipoTriangulo"
            android:layout_width="174dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="Comprobar"
            android:textSize="20sp" />


    </LinearLayout>



</LinearLayout>